adição css mobile

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>conversor de moedas</h1>
 
     <h4 class="subTitle">selecione a conversão e digite o valor:</h4>
+	<div>
     <main class="container">
       <select class="result" data-js="selecao" id="selected">
         <option value="USD" selected>USD (Dólar Comercial)</option>
@@ -37,6 +38,7 @@
       <button id="calcular">calcular</button>
       <h5 class="result" id="resultado">resultado</h5>
     </main>
+	</div>
 
     <script src="./javascript/app.js"></script>
   </body>
